[project]
name = "docker-launcher-healthcheck-example"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "build>=1.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docker_launcher_healthcheck_example"]
